Philippines Homepage * Edit Title Style (Not in love with it still. IMHO white is too hard to see... tried Sahana logo - ugly - ideas?) * Remove gap under image * Fixed Border on Donate / Request / $$$ Requests * Remove space between label and : in Filter Form. a) Inconsistent with Create/Update forms b) : sometimes wraps onto newline * Fixed styling for Person Widget Label (box_top label.control-label) - Tested on CRMT too Misc * Fixed error if Site doesn't have org * Removed buggy Req in Org Profile Page (See: http://test.philippines.sahanafoundation.org/eden/org/organisation/11/profile - perhaps something for Dominic to fix properly?) * Improved Styling of Organisation & Facility Profile pages

--- a/static/themes/bootstrap/profile.css
+++ b/static/themes/bootstrap/profile.css
@@ -9,10 +9,16 @@
     -moz-box-shadow: 0 -1px 3px #d7d7d6;
     -webkit-box-shadow: 0 -1px 3px #d7d7d6;
     box-shadow: 0 -1px 3px #d7d7d6;
+    padding: 10px
 }
+
+.profile_header img.media-object {
+    float: left;
+    padding-right: 10px;
+}
+
 .profile_header h2 {
-    height: 40px;
-    padding: 20px;
+    padding: 10px;
     margin: 0;
     font-size: 25px;
     color: #666;
@@ -22,8 +28,8 @@
     font-style: normal;
 }
 
-.profile_header img.media-object {
-    padding: 18px 10px 18px 5px;
+.profile_header .icon-edit {
+    float: right;
 }
 
 @media (max-width: 480px) {
